Kubectl Scripts/fleetapplication/multihost-ingressgateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - app.rakeshtesting.xyz 
    - kiali.rakeshtesting.xyz
    - prome.rakeshtesting.xyz
    - trace.rakeshtesting.xyz
    - grafana.rakeshtesting.xyz 
    - argo.rakeshtesting.xyz 
    - bookstore.rakeshtesting.xyz 
    - keda.rakeshtesting.xyz 
    port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - app.rakeshtesting.xyz 
    - kiali.rakeshtesting.xyz
    - prome.rakeshtesting.xyz
    - trace.rakeshtesting.xyz
    - grafana.rakeshtesting.xyz 
    - argo.rakeshtesting.xyz 
    - bookstore.rakeshtesting.xyz
    - keda.rakeshtesting.xyz 
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: my-tls-secret
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: fleetman-webapp
  namespace: istio-system
spec:
  hosts:
  - app.rakeshtesting.xyz  
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: fleetman-webapp.default.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali  
  namespace: istio-system
spec:
  hosts:
  - kiali.rakeshtesting.xyz  
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus 
  namespace: istio-system
spec:
  hosts:
  - "prome.rakeshtesting.xyz"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trace  
  namespace: istio-system
spec:
  hosts:
  - "trace.rakeshtesting.xyz"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: tracing
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana  
  namespace: istio-system
spec:
  hosts:
  - "grafana.rakeshtesting.xyz"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: grafana
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argo  
  namespace: istio-system
spec:
  hosts:
  - "argo.rakeshtesting.xyz"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: keda  
  namespace: istio-system
spec:
  hosts:
  - "keda.rakeshtesting.xyz"
  gateways:
  - main-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: func-svc.default.svc.cluster.local
        port:
          number: 80
